# PWatts_30A_switch

./: README.md
app_fw/: .cproject  .project  CMakeLists.txt  Makefile  sdkconfig
board_test/: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
board_test/main/: CMakeLists.txt  cmd_ble.c  cmd_emtr.c  cmd_inputs.c  cmd_leds.c  cmd_self_test.c  cmd_serial.c  cmd_tester.c  diff_ble.txt  main.c  simple_ble.c
board_test/main/include/: cmd_adc.h  cmd_atca.h  cmd_ble.h  cmd_digi.h  cmd_emtr.h  cmd_eth.h  cmd_inputs.h  cmd_iox.h  cmd_leds.h  cmd_self_test.h  cmd_serial.h  cmd_tester.h  cs_common.h  simple_ble.h
board_verify/: .cproject  .project  partitions.csv  sdkconfig  sdkconfig.old
board_verify/main/: CMakeLists.txt  main.c
board_verify/main/include/: cs_common.h
emtr_fw/: gen_c_file.py  how-to-gen-c-file.txt  mk_c_file.bat  mk_c_file.py  mk_c_file.sh  uart.c  uart.h
pw240_fw/: .cproject  .project  CMakeLists.txt  Makefile  partitions_8M_dev.csv  (+3 more)
pw240_fw/core_components/cs-core/: CMakeLists.txt  Kconfig.projbuild  cs_control.c  cs_core.c  cs_core_version.c  cs_events.c  cs_framework.c  debug_utils.c  event_callback.c  mfg_data.c  param_mgr.c  time_mgr.c
pw240_fw/core_components/cs-core/include/: cs_common.h  cs_control.h  cs_events.h  cs_framework.h  event_callback.h  mfg_data.h  mod_debug.h  param_mgr.h  time_mgr.h
pw240_fw/core_components/cs-utils/: CMakeLists.txt  bin_hex.c  cs_der_to_pem.c  cs_heap.c  cs_json_utils.c  cs_packer.c  cs_rpc_proc.c  cs_str_utils.c  cs_wifi_utils.c
pw240_fw/core_components/cs-utils/include/: cs_binhex.h  cs_der_to_pem.h  cs_heap.h  cs_json_utils.h  cs_packer.h  cs_rpc_proc.h  cs_str_utils.h  cs_wifi_utils.h  iot8020_utils.h
(+141 files in other folders)
